# eecs

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  Makefile
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  learn.md  requirements.txt
examples/pong/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  entity.hpp  game.cpp  game.hpp  scene.hpp  scene_manager.hpp  schedule.cpp  schedule.hpp  singleton.hpp  sparse_set.hpp  system.hpp  test.cpp  world.hpp
src/ecs/: CMakeLists.txt  any.hpp  app.cpp  app.hpp  entity.hpp  input.cpp  input.hpp  sparse_set.hpp  types.hpp  window.cpp  window.hpp  world.hpp
src/eecs/: CMakeLists.txt  schedule.cpp  schedule.hpp  system.hpp  world.hpp
tests/: CMakeLists.txt  any.t.cpp  app.t.cpp  scene_manager.t.cpp  schedule.t.cpp  sparse_set.t.cpp  world.t.cpp
